@@ -1,3 +1,3 @@
-EBUILD lovesegfault-0.ebuild 3752 BLAKE2B 90390a92e46622cd9a024e958831ed1c4a54c307a2c1799e55aafe91d2d80480a0fed73d24a0b4e83451839fa1977e5963efb89ff1ddb8409a91f73035aa6622 SHA512 f4ae087e80317db93f7df1bddacb052bb7af90c0088b4cedfe3248c561c8c4d17b061e1e88b067397ff642a6cf7231a0330649f09e0d06053d3c339cbcb6e08f
-MISC ChangeLog 140 BLAKE2B 8d5ad15cfc0f8ef6076235008e01c129d212b47194546ce30f1d6706a80767e7a55586727963ea20fa4f8d5a8579bc03189226939f89ff1ca8ba7200baf04de0 SHA512 7c60f25c560466c8504f8eb3e1fe893efcdba6bb6318cd701d43fa6e5125ad5a3c3821d90198bfcdad603292543acd2e36fca2ebc81c517f7319c5bb5a1a88cd
+EBUILD lovesegfault-0.ebuild 3614 BLAKE2B 0ec8ac7812be307fe40e0d568a558346dd992405e985a8a522e960a5218d085dd7e00b8a63be135ec7acb0b5d73cc35903fd6c29cf9df852329330d6c276af7f SHA512 8d716aee11311d20e3ed19c123785cfa996c5570a14346adb81f8387189b1d92d0e61319fe781d40769b28ad9efb22551e1c76826001b85bd41dbdd8f21e9314
+MISC ChangeLog 239 BLAKE2B 6681a955f4d0b26e2097e7527786ba1682df70cd00a0243a209933cde7b5e33674aa337a19fa26d6d76d2c03b1056cfb04d896432339dc55774f657b8860cced SHA512 875539969bd7bdc10c5c81486d724dc930a7513892b4ce1cfa1ddbf73825ae91c7229c3210b768c1c2ec82fa69e7e4cb19b206e30b5c9e69f870a14c4669e8e8
 MISC metadata.xml 521 BLAKE2B 2c2ee04ef6029ce5827209efacd6711dd5e1dc09c84af8bb3568e10e2c55eb447937fee651de449574be64a05012594c96ea3f8714236f1a00e64bcf98f6d263 SHA512 76672e9914ab21acbfbd255acbabf836ce83709407cfce2981d2bd015766a5895c54bd3a6a2f266a29f40183948713af02226844ddcaec719896cbce6cb8e29f
