@@ -1,3 +1,6 @@
+  25 Sep 2019;  <bemeurer@gentoo.org> lovesegfault-0.ebuild:
+  virtual/lovesegfault: changed deps
+
 *lovesegfault-0 (23 Sep 2019)
 
   23 Sep 2019;  <bemeurer@gentoo.org> +lovesegfault-0.ebuild, +metadata.xml:
